--- a/department-service.properties
+++ b/department-service.properties
@@ -9,4 +9,4 @@ spring.jpa.hibernate.ddl-auto=update
 
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 
-spring.boot.message="Hi, I am karthkeyan from department service.
+spring.boot.message=Hi, I am karthkeyan from department service updated
